--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-# Created by https://www.toptal.com/developers/gitignore/api/godot,windows
-# Edit at https://www.toptal.com/developers/gitignore?templates=godot,windows
+# Created by https://www.toptal.com/developers/gitignore/api/godot,windows,macos
+# Edit at https://www.toptal.com/developers/gitignore?templates=godot,windows,macos
 
 ### Godot ###
 # Godot 4+ specific ignores
@@ -17,6 +17,39 @@ export_presets.cfg
 .mono/
 data_*/
 mono_crash.*.json
+
+### macOS ###
+# General
+.DS_Store
+.AppleDouble
+.LSOverride
+
+# Icon must end with two \r
+Icon
+
+
+# Thumbnails
+._*
+
+# Files that might appear in the root of a volume
+.DocumentRevisions-V100
+.fseventsd
+.Spotlight-V100
+.TemporaryItems
+.Trashes
+.VolumeIcon.icns
+.com.apple.timemachine.donotpresent
+
+# Directories potentially created on remote AFP share
+.AppleDB
+.AppleDesktop
+Network Trash Folder
+Temporary Items
+.apdisk
+
+### macOS Patch ###
+# iCloud generated files
+*.icloud
 
 ### Windows ###
 # Windows thumbnail cache files
@@ -44,4 +77,4 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
-# End of https://www.toptal.com/developers/gitignore/api/godot,windows
+# End of https://www.toptal.com/developers/gitignore/api/godot,windows,macos
